# Nest

./: .bake.toml  .bumpversion.cfg  .codecov.yml  .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .gitignore.save  .hadolint.yaml  .markdownlint.yaml  .mkdocs.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  .semgrep.yml  .semgrepignore  .trivy.yaml  .trivyignore  .trivyignore.yaml  .yamllint  .zap-rules.tsv  .zapconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MENTORS.md  Makefile  README.md  SECURITY.md  SPONSORSHIP.md  ansible.cfg  checkmake.ini  docker-compose-production.yaml  docker-compose-production.yml  docker-compose-staging.yaml  docker-compose.yaml  docker-compose.yml  docker-compose.yml.save  eslint.config.js  (+26 more)
backend/: .dockerignore  .env.e2e-tests  .env.e2e.example  .env.example  .env.fuzz-tests  .env.fuzz.example  .env.localstack.example  .env.unit-tests  .gitignore  .package-lock.json.swp  Dockerfile.local  Dockerfile.production  Dockerfile.staging  Dockerfile.test  Makefile  README.md  coverage.xml  docker-compose.yml  entrypoint.fuzz.sh  entrypoint.sh  generate_erd.py  liblab.config.json  manage.py  openapi.json  poetry.toml  pyproject.toml  pytest.ini  requirements.build.txt  test.js  test_commands.py  wsgi.py  zappa_callback.py  zappa_settings.example.json  zappa_settings.json  zappa_settings.template.json
backend/.env/: template
backend/apps/: __init__.py
backend/apps/ai/: Makefile  __init__.py  admin.py  engine.py  handler.py  nestbot-ai-assistant.md  query_analyzer.py  retriever.py  router.py  semantic_cache.py  template_loader.py  utils.py
backend/apps/analytics/: admin.py  apps.py
backend/apps/api/: README.md  apps.py
backend/apps/chapter/: apps.py  models.py  views.py
backend/apps/committee/: apps.py  models.py  views.py
backend/apps/common/: apps.py  clients.py  constants.py  eleven_labs.py  extensions.py  geocoding.py  graphql_cache.py  index.py  model_fields.py  models.py  open_ai.py  otel.py  schema.py  template_loader.py  typesense.py  (+2 more)
backend/data/: dump.sh  nest.snapshots.dump
backend/docker/: Dockerfile  Dockerfile.e2e  Dockerfile.fuzz  Dockerfile.fuzz_tests  Dockerfile.graphql_fuzz  Dockerfile.local  Dockerfile.test  Dockerfile.video  entrypoint.fuzz.sh  entrypoint.sh  entrypoint_fuzz.sh  entrypoint_graphql_fuzz.sh
backend/docs/: Badges.md
backend/fuzz_tests/: conftest.py
backend/make/: README.md  clusterfuzz.mk  data.mk  django.mk  exec.mk  image.mk  maintenance.mk  security.mk  test.mk
backend/requirements/: build.in  build.txt  cluster-fuzz-lite.in  cluster-fuzz-lite.txt  fuzz.in  fuzz.txt  pre-commit.txt
backend/scripts/: common.py  fetch_nest_dump.py  upload_nest_dump.py
backend/settings/: __init__.py  api_v1.py  base.py  e2e.py  fuzz.py  graphql.py  graphql_context.py  graphs.py  local.py  production.py  staging.py  test.py  urls.py  wsgi.py
backend/templates/: base.html
backend/tests/: __init__.py  conftest.py  router_test.py  test_algolia_config.py  test_router.py
docs/: Dockerfile.schema-docs  Makefile  code-of-conduct.md  codebase.md  contributing.md  index.md  poetry.toml  pyproject.toml  requirements.txt  windows-setup.md
docs/api/: README.md  index.md  overview.md  projects.md
docs/backend/: overview.md
docs/docker/: Dockerfile.local
docs/frontend/: overview.md
docs/maintenance/: README.md
docs/make/: maintenance.mk  security.mk
docs/nestbot/: README.md  maintainer.md  overview.md  scenarios.md
docs/schema/: chapter.md  committee.md  common.md  documentation-null.md  index.md  leader-email-empty.md  overview.md  project.md
docs/scripts/: __init__.py  generate_schema_docs.py
docs/sdks/: overview.md
infrastructure/: .env.example  .terraform-docs.yaml  .terraform-docs.yml  .terraform.lock.hcl  .tflint.hcl  INFO.md  Makefile  README.md  main.tf  outputs.tf  pyproject.toml  staging.s3.tfbackend.example  terraform.tfvars.example  variables.tf
infrastructure/backend/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/bootstrap/: .terraform.lock.hcl  README.md  backend.tf  iam_policy_size_checks.tf  main.tf  outputs.tf  providers.tf  terraform.production.tfbackend.example  terraform.production.tfvars.example  terraform.staging.tfbackend.example  terraform.staging.tfvars.example  terraform.tfbackend.example  terraform.tfvars.example  variables.tf
infrastructure/bootstrap-production/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf
infrastructure/bootstrap-staging/: README.md  backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/live/: README.md  backend.tf  main.tf  outputs.tf  terraform.production.tfbackend.example  terraform.production.tfvars.example  terraform.staging.tfbackend.example  terraform.staging.tfvars.example  terraform.tfvars.example  terraform.tfvars.production.example  variables.tf
infrastructure/localstack/: README.md  main.tf  test.sh
infrastructure/make/: README.md  maintenance.mk  security.mk  test.mk
infrastructure/scripts/: __init__.py  check-prerequisites.sh  commands.py  deploy-services.sh  errors.py  fix-ssm-params.sh  load-env-params.sh  localstack.py  provision-infra.sh  run-integration-tests.sh  run-smoke-tests.sh  run-tests.sh  run_tests.py  runner.py  start-localstack.sh  terraform_docs.py  terraform_tests.py  test_run_tests.py
infrastructure/staging/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfbackend.example  terraform.tfvars.example  variables.tf
infrastructure/state/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
schema/: .bumpversion.cfg  Dockerfile.test  MANIFEST.in  Makefile  README.md  chapter.json  committee.json  common.json  project.json  pyproject.toml
schema/definitions/: community.json  person.json  repository.json  socialMedia.json  sponsor.json
schema/docker/: Dockerfile.test
schema/tests/: chapter_test.py  committee_test.py  conftest.py  package_test.py  project_test.py  test_project.py
schema/utils/: helpers.py  schema_validators.py  validators.py
(+5250 files in other folders)
