[tool.poetry]
name = "OWASP Nest"
version = "0.1.0"
description = "Streamlines OWASP entities management"
authors = ["Arkadii Yakovets <arkadii.yakovets@owasp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.7"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
ignore = ["ANN"]
select = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
