[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "OWASP Nest"
version = "0.0.0"
description = "Your gateway to OWASP"
authors = [ "Arkadii Yakovets <arkadii.yakovets@owasp.org>" ]
readme = "README.md"
packages = [ { include = "apps" } ]
dependencies.python = "^3.13"
dependencies.aiohttp = "3.14.1"
dependencies.algoliasearch = "4.40.0"
dependencies.algoliasearch-django = "4.0.0"
dependencies.cryptography = "48.0.1"
dependencies.django = "6.0.6"
dependencies.django-configurations = "2.5.1"
dependencies.django-cors-headers = "4.9.0"
dependencies.django-ninja = "1.6.2"
dependencies.django-redis = "6.0.0"
dependencies.django-rq = "3.2.2"
dependencies.django-storages = { extras = [ "s3" ], version = "1.14.6" }
dependencies.emoji = "2.15.0"
dependencies.geopy = "2.4.1"
dependencies.gunicorn = "25.3.0"
dependencies.humanize = "4.15.0"
dependencies.idna = "3.15"
dependencies.jinja2 = "3.1.6"
dependencies.langchain-core = "1.3.3"
dependencies.langgraph = "1.1.10"
dependencies.langsmith = "0.8.18"
dependencies.lxml = "6.1.0"
dependencies.markdown = "3.10.2"
dependencies.openai = "2.33.0"
dependencies.owasp-schema = "0.1.51"
dependencies.pgvector = "0.4.2"
dependencies.pillow = "12.2.0"
dependencies.psycopg2-binary = "2.9.12"
dependencies.pydantic = "2.12.5"
dependencies.pydantic-core = "2.41.5"
dependencies.pygithub = "2.9.1"
dependencies.pypdf = "5.9.0"
dependencies.pyjwt = { extras = [ "crypto" ], version = "2.13.0" }
dependencies.pyparsing = "3.3.2"
dependencies.python-dateutil = "2.9.0.post0"
dependencies.pyyaml = "6.0.3"
dependencies.reportlab = "4.4.10"
dependencies.requests = "2.33.1"
dependencies.sentry-sdk = { extras = [ "django" ], version = "2.58.0" }
dependencies.slack-bolt = "1.28.0"
dependencies.slack-sdk = "3.41.0"
dependencies.starlette = "1.3.1"
dependencies.strawberry-graphql = { extras = [ "django" ], version = "0.316.0" }
dependencies.strawberry-graphql-django = "0.75.3"
dependencies.thefuzz = "0.22.1"
dependencies.urllib3 = "2.7.0"
group.fuzz.dependencies.schemathesis = "4.16.0"
group.test.dependencies.pytest = "9.0.3"
group.test.dependencies.pytest-cov = "7.1.0"
group.test.dependencies.pytest-django = "4.12.0"
group.test.dependencies.pytest-mock = "3.15.1"
group.test.dependencies.pytest-xdist = "3.8.0"
group.test.dependencies.python-dotenv = "1.2.2"
group.video.dependencies.elevenlabs = "2.45.0"
group.video.dependencies.ffmpeg-python = "0.2.0"
group.video.dependencies.pypdfium2 = "5.7.1"
group.video.dependencies.weasyprint = "68.1"

[tool.djlint]
indent = 4
format_css = true
format_js = true
format = true

[tool.ruff]
target-version = "py313"
line-length = 99
lint.select = [ "ALL" ]
lint.extend-select = [ "I" ]
lint.ignore = [
  "ANN",     # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann/
  "ARG002",  # https://docs.astral.sh/ruff/rules/unused-method-argument/
  "C901",    # https://docs.astral.sh/ruff/rules/complex-structure/
  "COM812",  # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
  "D407",    # https://docs.astral.sh/ruff/rules/missing-dashed-underline-after-section/
  "DJ012",   # https://docs.astral.sh/ruff/rules/django-unordered-body-content-in-model/
  "FIX002",  # https://docs.astral.sh/ruff/rules/line-contains-todo/
  "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
  "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
  "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
  "RUF012",  # https://docs.astral.sh/ruff/rules/mutable-class-default/
  "TD003",   # https://docs.astral.sh/ruff/rules/missing-todo-link/
]
lint.per-file-ignores."**/__init__.py" = [
  "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/
  "F401", # https://docs.astral.sh/ruff/rules/unused-import/
]
lint.per-file-ignores."apps/**/management/commands/*.py" = [
  "D101",   # https://docs.astral.sh/ruff/rules/undocumented-public-class/
  "D102",   # https://docs.astral.sh/ruff/rules/undocumented-public-method/
  "SLF001", # https://docs.astral.sh/ruff/rules/private-member-access/
]
lint.per-file-ignores."apps/**/migrations/*.py" = [
  "ARG001", # https://docs.astral.sh/ruff/rules/unused-function-argument/
  "D100",   # https://docs.astral.sh/ruff/rules/undocumented-public-module/
  "D101",   # https://docs.astral.sh/ruff/rules/undocumented-public-class/
  "D103",   # https://docs.astral.sh/ruff/rules/undocumented-public-function/
  "D104",   # https://docs.astral.sh/ruff/rules/undocumented-public-package/
  "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
  "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default/
]
lint.per-file-ignores."apps/api/rest/**/*.py" = [
  "ARG001", # https://docs.astral.sh/ruff/rules/unused-function-argument/
  "B008",   # https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
]
lint.per-file-ignores."apps/github/models/mixins/*.py" = [ "PLC0415" ]
lint.per-file-ignores."apps/slack/commands/*.py" = [ "PLC0415" ]
lint.per-file-ignores."apps/slack/common/handlers/*.py" = [ "PLC0415" ]
lint.per-file-ignores."apps/slack/events/**/*.py" = [ "PLC0415" ]
lint.per-file-ignores."settings/*.py" = [
  "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default/
]
lint.per-file-ignores."tests/**/*.py" = [
  "D100",    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
  "D101",    # https://docs.astral.sh/ruff/rules/undocumented-public-class/
  "D102",    # https://docs.astral.sh/ruff/rules/undocumented-public-method/
  "D103",    # https://docs.astral.sh/ruff/rules/undocumented-public-function/
  "D106",    # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
  "D107",    # https://docs.astral.sh/ruff/rules/undocumented-public-init/
  "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
  "RUF012",  # https://docs.astral.sh/ruff/rules/mutable-class-default/
  "S101",    # https://docs.astral.sh/ruff/rules/assert/
  "SLF001",  # https://docs.astral.sh/ruff/rules/private-member-access/
]

[tool.mypy]
mypy_path = "backend"
explicit_package_bases = true
ignore_missing_imports = true
plugins = [ "strawberry.ext.mypy_plugin" ]

[[tool.mypy.overrides]]
module = [ "apps.*.admin.*", "apps.*.models.mixins.*" ]
disable_error_code = [ "attr-defined" ]

[[tool.mypy.overrides]]
module = [ "apps.*.migrations.*" ]
disable_error_code = [ "var-annotated" ]

[[tool.mypy.overrides]]
module = [ "apps.*.api.internal.nodes.*", "apps.*.api.internal.queries.*" ]
disable_error_code = [ "attr-defined", "misc", "return-value" ]

[tool.pyright]
pythonVersion = "3.13"
venv = ".venv"
venvPath = "."
include = [ "apps", "tests" ]
extraPaths = [ "." ]

[tool.pytest]
ini_options.addopts = [
  "--cov-config=pyproject.toml",
  "--cov-fail-under=95",
  "--cov-precision=2",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov=.",
  "--dist=loadscope",
  "--durations-min=1",
  "--durations=5",
  "--no-cov-on-fail",
  "--numprocesses=auto",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pytest_cov",
  "ignore::DeprecationWarning:xdist",
  "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
ini_options.log_level = "INFO"
ini_options.DJANGO_CONFIGURATION = "Test"
ini_options.DJANGO_SETTINGS_MODULE = "settings.test"

[tool.coverage]
run.branch = true
run.omit = [
  "**/migrations/*",
  "__init__.py",
  "manage.py",
  "settings/*",
  "tests/*",
  "wsgi.py",
]
