[tool.poetry]
name = "owasp-nest-documentation"
version = "0.1.0"
description = "OWASP Nest Documentation"
authors = ["Arkadii Yakovets <arkadii.yakovets@owasp.org>"]
license = "MIT"

[tool.poetry.dependencies]
json-schema-for-humans = "^1.3.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings = "^0.29.0"
pymdown-extensions = "^10.14.3"
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
