[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "owasp-nest-documentation"
version = "0.1.0"
description = "OWASP Nest Documentation"
authors = [ "Arkadii Yakovets <arkadii.yakovets@owasp.org>" ]
license = "MIT"

[tool.poetry.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.19"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings = "^1.0.0"
pymdown-extensions = "^10.14.3"
python = "^3.13"
