[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "owasp-nest-documentation"
version = "0.1.0"
description = "OWASP Nest Documentation"
authors = [ "Arkadii Yakovets <arkadii.yakovets@owasp.org>" ]
license = "MIT"
dependencies.mkdocs = "^1.6.1"
dependencies.mkdocs-material = "^9.6.19"
dependencies.mkdocs-minify-plugin = "^0.8.0"
dependencies.mkdocstrings = "^1.0.0"
dependencies.pymdown-extensions = "^10.20.0"
dependencies.python = "^3.13"
